@@ -615,6 +615,7 @@ Some default configuration options have changed:
 * (bug 6497) Use $wgMetaNamespaceTalk for Esperanto if set
 * (bug 6498) Use localized forms for image size in Special:Undelete
 * (bug 6485) Update to Indonesian translation (id) #24
+* Extension messages translation is now possible.
 
 
 == Compatibility ==
